--- a/ts/app.css
+++ b/ts/app.css
@@ -99,9 +99,6 @@ body {
 }
 
 /* ----------------------- node styles ------------------------- */
-.jtk-node svg * {
-    vector-effect: non-scaling-stroke;
-}
 
 .jtk-surface-selected-element {
     border:none !important;
@@ -151,18 +148,19 @@ body {
 }
 
 .flowchart-object .node-delete {
-    right: 4px;
-    background-color: #d83f3f;
+    right: -3px;
+    background-color: var(--jtk-draw-handle-background);
 }
 
 .flowchart-object.jtk-surface-selected-element .node-action {
     display: block;
     width: 15px;
     height: 15px;
-    top:-20px;
-    cursor:pointer;
-    line-height: 15px;
-
+    top: -20px;
+    cursor: pointer;
+    line-height: 17px;
+    border-radius: 50%;
+    font-size: smaller;
 }
 
 .flowchart-object .connect {
@@ -401,65 +399,6 @@ Applied to the drop down that lets the user pick their current shape set.
 /* --------------------------- selected vertices ------------------------------ */
 /* ---------------------------------------------------------------------------------------------- */
 
-/*
-    Assigned to the element that is drawn around some other element when a drawing operation is taking place.
-*/
-.jtk-draw-skeleton {
-    position: absolute;
-    left: var(--jtk-draw-skeleton-padding);
-    right: -0.6rem;
-    top: -0.6rem;
-    bottom: -0.6rem;
-    outline: 0.125rem solid var(--jtk-component-select);
-    opacity: 0.8;
-}
-
-/*
-    Assigned to every handle (top left, top right, bottom left, bottom right, center) in a draw skeleton.
-*/
-.jtk-draw-handle {
-    position: absolute;
-    width: 0.6rem;
-    height: 0.6rem;
-    border-radius:50%;
-    background-color: var(--jtk-component-select);
-}
-
-/*
-    Assigned to the top left handle in a draw skeleton
-*/
-.jtk-draw-handle-tl {
-    left: -0.3rem;
-    top: -0.3rem;
-    cursor: nw-resize;
-}
-
-/*
-    Assigned to the top right handle in a draw skeleton
-*/
-.jtk-draw-handle-tr {
-    right: -0.3rem;
-    top: -0.3rem;
-    cursor: ne-resize;
-}
-
-/*
-    Assigned to the bottom left handle in a draw skeleton
-*/
-.jtk-draw-handle-bl {
-    left: -0.3rem;
-    bottom: -0.3rem;
-    cursor: sw-resize;
-}
-
-/*
-    Assigned to the bottom right handle in a draw skeleton
-*/
-.jtk-draw-handle-br {
-    bottom: -0.3rem;
-    right: -0.3rem;
-    cursor: se-resize;
-}
 
 .jtk-anchor-placeholder {
     z-index:13;
