--- a/angular/src/styles.scss
+++ b/angular/src/styles.scss
@@ -1,5 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
 @import "../node_modules/@jsplumbtoolkit/browser-ui/css/jsplumbtoolkit.css";
+@import "../node_modules/@jsplumbtoolkit/browser-ui-angular/css/jsplumbtoolkit-angular.css";
 @import "../node_modules/@jsplumbtoolkit/browser-ui/css/jsplumbtoolkit-connector-editors.css";
 @import "../node_modules/@jsplumbtoolkit/browser-ui/css/jsplumbtoolkit-controls.css";
 @import './app.css';
@@ -14,7 +15,6 @@ jtk-shape {
 jsplumb-surface {
   width:100%;
   height:100%;
-  display:block;
 }
 
 .jtk-surface {
@@ -26,6 +26,10 @@ jsplumb-miniview {
   position:absolute;
   top:2rem;
   right:2rem;
+}
+
+.jtk-miniview {
+  position:relative;
 }
 
 jsplumb-controls {
