use the ExportControlsComponent that ships in JsPlumb 6.70.0 now

--- a/react/src/index.css
+++ b/react/src/index.css
@@ -47,14 +47,9 @@ body {
   z-index:50;
 }
 
-.jtk-export {
-    left: 25px;
-    position: absolute;
-    top: 60px;
-    z-index: 100;
-    background-color: white;
-    padding: 0.5rem;
-    border-radius: 0.25rem;
+.jtk-export-controls {
+   top:auto;
+  bottom:1rem;
 }
 
 .jtk-demo-canvas {
