--- a/nextjs/app/index.css
+++ b/nextjs/app/index.css
@@ -52,14 +52,9 @@
   z-index:50;
 }
 
-.jtk-export {
-    left: 25px;
-    position: absolute;
-    top: 60px;
-    z-index: 100;
-    background-color: white;
-    padding: 0.5rem;
-    border-radius: 0.25rem;
+.jtk-export-controls {
+    top:auto;
+  bottom:1rem;
 }
 
 .jtk-demo-rhs {
