--- a/vue3/src/assets/main.css
+++ b/vue3/src/assets/main.css
@@ -1,4 +1,5 @@
 @import "../../node_modules/@jsplumbtoolkit/browser-ui/css/jsplumbtoolkit.css";
+@import "../../node_modules/@jsplumbtoolkit/browser-ui/css/jsplumbtoolkit-controls.css";
 @import "../../node_modules/@jsplumbtoolkit/browser-ui/css/jsplumbtoolkit-connector-editors.css";
 @import "../../node_modules/@jsplumbtoolkit/browser-ui/css/jsplumbtoolkit-demo-support.css";
 @import "./app.css";
